[package]
name = "fetch-lyrics"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
async-compat = "0.2.4"
chrono = { version = "0.4.41", features = ["serde"] }
error_set = "0.8.5"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
smol = "2.0.2"
smol-macros = "0.1.1"
